# mcpywrap

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
mcpywrap/: __init__.py  __main__.py  cli.py  config.py  custom_packaging.py
mcpywrap/builders/: AddonsPack.py  MapPack.py  __init__.py  dependency_manager.py  file_handler.py  file_merge.py  project_builder.py  watcher.py
mcpywrap/commands/: __init__.py  build_cmd.py  default_cmd.py  dev_cmd.py  edit_cmd.py  init_cmd.py  install_cmd.py  modsdk_cmd.py  publish_cmd.py  run_cmd.py
mcpywrap/mcstudio/: SimpleMonitor.py  editor.py  game.py  mcs.py  studio_server.py  studio_server_ui.py  symlink_helper.py  symlinks.py
mcpywrap/minecraft/: __init__.py  addons.py  map.py  netease_modsdk.py
mcpywrap/minecraft/template/: generate_mod_files.py  mod_template.py
mcpywrap/ui/: run_ui.py
mcpywrap/utils/: __init__.py  print_guide.py  project_setup.py  utils.py
test/: .gitignore  pyproject.toml
test/behavior_pack/: manifest.json
test/behavior_pack/MyScript/: config.py  modMain.py
test/behavior_pack/MyScript/client/: MyFirstModClient.py
test/behavior_pack/MyScript/server/: MyFirstModServer.py
test/resource_pack/: manifest.json
