[build-system]
requires = [
    "setuptools>=42",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "test"
version = "0.1.0"
description = ""
authors = [
    { name = "boybook", email = "fangyizhou1997@qq.com" },
]
readme = "README.md"
requires-python = ">=3.6"
dependencies = []
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

[project.license]
text = "MIT"

[tool.setuptools.package-dir]
"" = "behavior_pack"

[tool.setuptools.packages.find]
where = [
    "behavior_pack",
]
include = [
    "*",
]

[tool.mcpywrap]
target_dir = "./build"
